<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#2f1f22" >

            <include layout="@layout/titlebar_new_phonebook" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_photo"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:layout_gravity="bottom" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/new_phonebook_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:src="@drawable/photo" />

                        <ImageButton
                            android:id="@+id/new_phonebook_photo_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|left"
                            android:layout_marginLeft="20sp"
                            android:background="@layout/selector_btn_open" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_initials"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_initials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_name"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_localname"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_localname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_gender"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/new_phonebook_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/new_phonebook_gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/lable_gender_male" />

                        <RadioButton
                            android:id="@+id/new_phonebook_gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lable_gender_female" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_phone"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_title"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_depno"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/new_phonebook_departmentno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_depname"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/new_phonebook_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_phonebook_manager"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_phonebook_manager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>