<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/searchby_initials" />

            <EditText
                android:id="@+id/searchby_initials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:ems="9"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/searchby_name" />

            <EditText
                android:id="@+id/searchby_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:ems="9"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/searchby_phone" />

            <EditText
                android:id="@+id/searchby_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:ems="9"
                android:inputType="phone"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/searchby_depName" />

            <Spinner
                android:id="@+id/searchby_depName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/searchby_manager" />

            <EditText
                android:id="@+id/searchby_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:ems="9"
                android:text="" />
        </TableRow>
    </TableLayout>

</LinearLayout>