<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#2f1f22" >

            <include layout="@layout/titlebar_new_map" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_map_image"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" 
                        android:layout_gravity="bottom"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/new_map_image"
                            android:layout_width="@dimen/map_width_thumbnail_big"
                            android:layout_height="@dimen/map_height_thumbnail_big"
                            android:layout_gravity="left"
                            android:src="@drawable/new_image" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_map_imagefile"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/new_map_filename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:layout_gravity="center"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/new_map_floor"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" 
                        android:layout_gravity="center" />

                    <com.nnit.phonebook.dataeditor.ui.NumberPicker
                        android:id="@+id/new_map_floor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>